[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/PH/blueSquare.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GameParts/MiniMap.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/PH/greenCircle.png" type="Texture" id=4]
[ext_resource path="res://Assets/PH/whiteCircle.png" type="Texture" id=5]

[node name="MiniMap" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 2.57, 2.57 )
texture = ExtResource( 1 )

[node name="GreenCircle" type="Sprite" parent="Background"]
scale = Vector2( 1.15272, 1.15272 )
texture = ExtResource( 4 )

[node name="CameraView" type="Sprite" parent="."]
scale = Vector2( 0.74, 0.74 )
texture = ExtResource( 5 )

[node name="MiniMapItems" type="Node2D" parent="."]

[node name="Player" type="Sprite" parent="MiniMapItems"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="BorderBoundaries" type="Node2D" parent="."]

[node name="TopLeft" type="Position2D" parent="BorderBoundaries"]
position = Vector2( -128, -128 )

[node name="BottomRight" type="Position2D" parent="BorderBoundaries"]
position = Vector2( 128, 128 )
